# regit-rs

./: .gitignore  Cargo.toml  LICENSE  README.md
scripts/: build_release.sh  install.sh  install_release.sh  installer.sh
src/: app.rs  cache.rs  degit.rs  lib.rs  macros.rs  options.rs  repository.rs  traits.rs  util.rs
